# server/api/Dtos/LoginDto.cs
@@ -1,0 +1,8 @@
+﻿namespace api.Dtos;
+
+public class LoginDto
+{ 
+    public string Email { get; set; }
+    public string Password { get; set; }
+
+}
